Added Search Input Box.

--- a/MovieStoreCore/Pages/Movies/List.cshtml
+++ b/MovieStoreCore/Pages/Movies/List.cshtml
@@ -11,6 +11,19 @@
     <title>List</title>
 </head>
 <body>
+    <br />
+    <form method="get">
+        <div class="form-group">
+            <div class="input-group">
+                <input type="search" class="form-control" asp-for="SearchTerm" />
+                <span class="input-group-btn">
+                    <button class="btn btn-default">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </span>
+            </div>
+        </div>
+    </form>
     <table class="table">
         @foreach (var item in Model.moviesData)
         {
