Add details for items in the list

--- a/MovieStoreCore/Pages/Movies/List.cshtml
+++ b/MovieStoreCore/Pages/Movies/List.cshtml
@@ -27,11 +27,16 @@
     <table class="table">
         @foreach (var item in Model.moviesData)
         {
-            <tr>
-                <td>@item.MovieName</td> 
-                <td>@item.Country</td>
-                <td>@item.Genres</td>
-            </tr> 
+        <tr>
+            <td>@item.MovieName</td>
+            <td>@item.Country</td>
+            <td>@item.Genres</td>
+            <td>
+                <a class="btn btn-lg" asp-page="./Details" asp-route-movieId="@item.Id">
+                    <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+            </td>
+        </tr> 
         }
 
     </table>
