--- a/MovieStoreCore/Pages/Movies/List.cshtml
+++ b/MovieStoreCore/Pages/Movies/List.cshtml
@@ -41,6 +41,11 @@
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
             </td>
+            <td>
+                <a class="btn btn-lg" asp-page="./Delete" asp-route-movieId="@item.Id">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
+            </td>
         </tr> 
         }
 
